api: drop acocuntId from create transaction endpoint
Each TransactionLine has an AccountId, so we don't need one here.
