# openapi.yaml
@@ -77,6 +77,45 @@ paths:
                 $ref: '#/components/schemas/Account'
         '404':
           description: No account found for provided query parameters
+  /accounts/transactions:
+    post:
+      tags:
+        - GL
+      summary: Post a transaction against multiple accounts. All transaction lines must sum to zero. No money is created or destroyed in a transaction - only moved from account to account. Accounts can be referred to in a Transaction without creating them first.
+      operationId: createTransaction
+      parameters:
+        - name: X-Request-Id
+          in: header
+          description: Optional Request ID allows application developer to trace requests through the systems logs
+          example: rs4f9915
+          schema:
+            type: string
+        - name: X-User-Id
+          in: header
+          description: Moov User ID header, required in all requests
+          example: e3cdf999
+          schema:
+            type: string
+          required: true
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateTransaction'
+      responses:
+        '200':
+          description: Transaction successfully created against the account(s)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Transaction'
+        '400':
+          description: Transaction was not created, see error(s)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /accounts/{account_id}/transactions:
     get:
       tags:
@@ -117,51 +156,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Transactions'
-    post:
-      tags:
-        - GL
-      summary: Post a transaction onto an account. All transaction lines must sum to zero. No money is created or destroyed in a transaction - only moved from account to account. Accounts can be referred to in a Transaction without creating them first.
-      operationId: createTransaction
-      parameters:
-        - name: account_id
-          in: path
-          description: Account ID
-          required: true
-          schema:
-            type: string
-            example: 098f3653-1dcb-4358-903e-4c7576f957f6
-        - name: X-Request-Id
-          in: header
-          description: Optional Request ID allows application developer to trace requests through the systems logs
-          example: rs4f9915
-          schema:
-            type: string
-        - name: X-User-Id
-          in: header
-          description: Moov User ID header, required in all requests
-          example: e3cdf999
-          schema:
-            type: string
-          required: true
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/CreateTransaction'
-      responses:
-        '200':
-          description: Transaction successfully created against the account(s)
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Transaction'
-        '400':
-          description: Transaction was not created, see error(s)
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
   /customers:
     post:
       tags:
